Added constraint to prevent self-inspection.

--- a/notebooks/mechanics_roster_optimization_dist_cost.ipynb
+++ b/notebooks/mechanics_roster_optimization_dist_cost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "f5fc1dac",
    "metadata": {},
    "outputs": [
@@ -49,17 +49,17 @@
       "\n",
       "Base Aircraft Schedule:\n",
       "   base_id  aw139  h175  sk92  period  shift  aw139_af_inspec  aw139_r_inspec  \\\n",
-      "0        1      1     1     0       1      1                0               1   \n",
-      "1        1      1     1     0       1      2                0               0   \n",
-      "2        1      1     1     0       2      1                0               0   \n",
+      "0        1      1     1     0       1      1                1               1   \n",
+      "1        1      1     1     0       1      2                1               0   \n",
+      "2        1      1     1     0       2      1                1               0   \n",
       "3        1      1     1     0       2      2                0               0   \n",
       "4        2      0     0     1       1      1                0               0   \n",
       "\n",
       "   aw139_av_inspec  h175_af_inspec  h175_r_inspec  h175_av_inspec  \\\n",
-      "0                0               1              1               1   \n",
-      "1                1               0              0               1   \n",
-      "2                0               0              0               1   \n",
-      "3                1               1              0               1   \n",
+      "0                0               0              1               0   \n",
+      "1                0               0              1               0   \n",
+      "2                0               1              0               0   \n",
+      "3                0               1              1               1   \n",
       "4                0               0              0               0   \n",
       "\n",
       "   sk92_af_inspec  sk92_r_inspec  sk92_av_inspec  \n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "523bc134",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "2557766c",
    "metadata": {},
    "outputs": [
@@ -417,6 +417,87 @@
     "    print(f\"Total constraints: {solver.NumConstraints()}\")\n",
     "else:\n",
     "    print(\"No inspector requirement columns found in base schedule. Skipping inspector constraints.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b2673a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Constraint 4: No Self-Inspection Constraint\n",
+    "# If a mechanic is assigned as an inspector for a skill, they cannot be the only one\n",
+    "# doing that work. At least one OTHER mechanic with the regular skill must also be assigned.\n",
+    "# This prevents a mechanic from inspecting their own work.\n",
+    "# Mathematical formulation:\n",
+    "# For each (base, period, shift) and inspector requirement:\n",
+    "#   If mechanic m_inspector is assigned AND has inspector skill, then:\n",
+    "#     Σ(m ∈ other_mechanics with regular skill) x[m, b, g, s] ≥ 1\n",
+    "# Which can be written as:\n",
+    "#   x[m_inspector, b, g, s] ≤ Σ(m ∈ other_mechanics) x[m, b, g, s]\n",
+    "\n",
+    "print(\"Adding no self-inspection constraints...\")\n",
+    "\n",
+    "no_self_inspection_count = 0\n",
+    "\n",
+    "# Get all inspector requirement columns from base schedule\n",
+    "inspector_req_columns = [col for col in base_schedule_df.columns if col.endswith('_inspec')]\n",
+    "\n",
+    "if inspector_req_columns:\n",
+    "    # Iterate through each row in base_aircraft_schedule\n",
+    "    for _, row in base_schedule_df.iterrows():\n",
+    "        base_id = int(row['base_id'])\n",
+    "        period = int(row['period'])\n",
+    "        shift = int(row['shift'])\n",
+    "        \n",
+    "        # Check each inspector requirement column\n",
+    "        for inspector_col in inspector_req_columns:\n",
+    "            if inspector_col in base_schedule_df.columns:\n",
+    "                inspector_required = row[inspector_col]\n",
+    "                # Check if inspector is required (value > 0)\n",
+    "                if pd.notna(inspector_required) and inspector_required > 0:\n",
+    "                    # Extract the regular skill name from inspector column\n",
+    "                    # e.g., \"aw139_af_inspec\" -> \"aw139_af\"\n",
+    "                    regular_skill_name = inspector_col.replace('_inspec', '')\n",
+    "                    \n",
+    "                    # For each mechanic who could be the inspector (has inspector skill)\n",
+    "                    for m_inspector in mechanics:\n",
+    "                        if mechanic_inspector_skills[m_inspector].get(inspector_col, 0) == 1:\n",
+    "                            # This mechanic could be assigned as inspector\n",
+    "                            # We need to ensure that if they are assigned, at least one\n",
+    "                            # OTHER mechanic with the regular skill is also assigned\n",
+    "                            \n",
+    "                            # Count how many OTHER mechanics (not m_inspector) have the regular skill\n",
+    "                            other_mechanics_with_skill = [\n",
+    "                                m for m in mechanics \n",
+    "                                if m != m_inspector \n",
+    "                                and mechanic_skills[m].get(regular_skill_name, 0) == 1\n",
+    "                            ]\n",
+    "                            \n",
+    "                            if other_mechanics_with_skill:\n",
+    "                                # Create constraint: If m_inspector is assigned, then at least one\n",
+    "                                # other mechanic with the regular skill must also be assigned\n",
+    "                                # x[m_inspector, b, g, s] ≤ Σ(m ∈ other_mechanics) x[m, b, g, s]\n",
+    "                                \n",
+    "                                constraint = solver.Constraint(\n",
+    "                                    -solver.infinity(), 0,\n",
+    "                                    f'no_self_inspect_{inspector_col}_base{base_id}_period{period}_shift{shift}_inspector{m_inspector}'\n",
+    "                                )\n",
+    "                                \n",
+    "                                # Left side: x[m_inspector, b, g, s]\n",
+    "                                constraint.SetCoefficient(x[(m_inspector, base_id, period, shift)], 1)\n",
+    "                                \n",
+    "                                # Right side: -Σ(m ∈ other_mechanics) x[m, b, g, s]\n",
+    "                                for m_other in other_mechanics_with_skill:\n",
+    "                                    constraint.SetCoefficient(x[(m_other, base_id, period, shift)], -1)\n",
+    "                                \n",
+    "                                no_self_inspection_count += 1\n",
+    "    \n",
+    "    print(f\"Added {no_self_inspection_count} no self-inspection constraints\")\n",
+    "    print(f\"Total constraints: {solver.NumConstraints()}\")\n",
+    "else:\n",
+    "    print(\"No inspector requirements found. Skipping no self-inspection constraints.\")"
    ]
   },
   {
@@ -640,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "0a2bf212",
    "metadata": {},
    "outputs": [
@@ -751,7 +832,54 @@
     "else:\n",
     "    print(\"ℹ Constraint 3: No inspector requirements found (skipped)\")\n",
     "\n",
-    "print(f\"\\n✓ Total constraint violations: {len(violations) + len(skill_violations) + len(inspector_violations)}\")"
+    "# Verify no self-inspection constraints\n",
+    "self_inspection_violations = []\n",
+    "\n",
+    "if inspector_req_columns:\n",
+    "    for _, row in base_schedule_df.iterrows():\n",
+    "        base_id = int(row['base_id'])\n",
+    "        period = int(row['period'])\n",
+    "        shift = int(row['shift'])\n",
+    "        \n",
+    "        for inspector_col in inspector_req_columns:\n",
+    "            if inspector_col in base_schedule_df.columns:\n",
+    "                inspector_required = row[inspector_col]\n",
+    "                if pd.notna(inspector_required) and inspector_required > 0:\n",
+    "                    # Extract the regular skill name\n",
+    "                    regular_skill_name = inspector_col.replace('_inspec', '')\n",
+    "                    \n",
+    "                    # Check each mechanic who could be inspector\n",
+    "                    for m_inspector in mechanics:\n",
+    "                        if mechanic_inspector_skills[m_inspector].get(inspector_col, 0) == 1:\n",
+    "                            # If this mechanic is assigned\n",
+    "                            if x[(m_inspector, base_id, period, shift)].solution_value() > 0.5:\n",
+    "                                # Check if there's at least one OTHER mechanic with the regular skill assigned\n",
+    "                                other_mechanics_with_skill_assigned = sum(\n",
+    "                                    x[(m, base_id, period, shift)].solution_value()\n",
+    "                                    for m in mechanics\n",
+    "                                    if m != m_inspector\n",
+    "                                    and mechanic_skills[m].get(regular_skill_name, 0) == 1\n",
+    "                                )\n",
+    "                                \n",
+    "                                if other_mechanics_with_skill_assigned < 0.999:\n",
+    "                                    self_inspection_violations.append(\n",
+    "                                        f\"Base {base_id}, Period {period}, Shift {shift}: \"\n",
+    "                                        f\"Mechanic {m_inspector} is inspector for {inspector_col} but no other \"\n",
+    "                                        f\"mechanic with {regular_skill_name} is assigned (self-inspection violation)\"\n",
+    "                                    )\n",
+    "    \n",
+    "    if not self_inspection_violations:\n",
+    "        print(\"✓ Constraint 4: No self-inspection violations (inspectors have other mechanics to inspect)\")\n",
+    "    else:\n",
+    "        print(\"✗ Self-inspection violations:\")\n",
+    "        for v in self_inspection_violations[:10]:  # Show first 10\n",
+    "            print(f\"  {v}\")\n",
+    "        if len(self_inspection_violations) > 10:\n",
+    "            print(f\"  ... and {len(self_inspection_violations) - 10} more\")\n",
+    "else:\n",
+    "    print(\"ℹ Constraint 4: No inspector requirements found (skipped)\")\n",
+    "\n",
+    "print(f\"\\n✓ Total constraint violations: {len(violations) + len(skill_violations) + len(inspector_violations) + len(self_inspection_violations)}\")"
    ]
   }
  ],
