Added Avoidance Mechanic Penalty.

--- a/notebooks/mechanics_roster_optimization_dist_cost.ipynb
+++ b/notebooks/mechanics_roster_optimization_dist_cost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "f5fc1dac",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,32 @@
     "inspector_req_columns = [col for col in base_schedule_df.columns if col.endswith('_inspec')]\n",
     "print(f\"Inspector requirement columns in base schedule: {len(inspector_req_columns)}\")\n",
     "if inspector_req_columns:\n",
-    "    print(f\"  Inspector requirement columns: {inspector_req_columns[:5]}...\" if len(inspector_req_columns) > 5 else f\"  Inspector requirement columns: {inspector_req_columns}\")"
+    "    print(f\"  Inspector requirement columns: {inspector_req_columns[:5]}...\" if len(inspector_req_columns) > 5 else f\"  Inspector requirement columns: {inspector_req_columns}\")\n",
+    "\n",
+    "# Load avoidance list\n",
+    "try:\n",
+    "    avoidance_df = pd.read_excel('../data/avoidance_list.xlsx')\n",
+    "    print(\"\\n\\nAvoidance List:\")\n",
+    "    print(avoidance_df.head())\n",
+    "    print(f\"\\nShape: {avoidance_df.shape}\")\n",
+    "    \n",
+    "    # Create avoidance dictionary: (mechanic_id, avoid_mechanic_id) -> penalty\n",
+    "    avoidance_dict = {}\n",
+    "    for _, row in avoidance_df.iterrows():\n",
+    "        m1 = int(row['mechanic_id'])\n",
+    "        m2 = int(row['avoid_mechanic_id'])\n",
+    "        penalty = float(row['penalty'])\n",
+    "        # Store both directions (m1 avoids m2 and m2 avoids m1) with same penalty\n",
+    "        avoidance_dict[(m1, m2)] = penalty\n",
+    "        avoidance_dict[(m2, m1)] = penalty  # Symmetric relationship\n",
+    "    \n",
+    "    print(f\"\\nAvoidance dictionary created with {len(avoidance_dict)} entries\")\n",
+    "    print(\"Sample avoidance pairs:\")\n",
+    "    for i, (key, val) in enumerate(list(avoidance_dict.items())[:5]):\n",
+    "        print(f\"  Mechanic {key[0]} avoids Mechanic {key[1]}: penalty {val}\")\n",
+    "except FileNotFoundError:\n",
+    "    print(\"\\n\\nAvoidance list not found. Skipping avoidance penalties.\")\n",
+    "    avoidance_dict = {}"
    ]
   },
   {
@@ -502,7 +527,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "id": "d33b8a34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Avoidance Penalty Variables and Constraints\n",
+    "# To linearize the penalty when two mechanics who don't work well together are assigned together,\n",
+    "# we create binary variables y[m1, m2, b, g, s] = x[m1, b, g, s] * x[m2, b, g, s]\n",
+    "# This represents both mechanics being assigned to the same (base, period, shift)\n",
+    "# We then add penalty * y[m1, m2, b, g, s] to the objective function\n",
+    "\n",
+    "print(\"Creating avoidance penalty variables and constraints...\")\n",
+    "\n",
+    "# Dictionary to store avoidance penalty variables: y[(m1, m2, b, g, s)]\n",
+    "avoidance_vars = {}\n",
+    "\n",
+    "if avoidance_dict:\n",
+    "    # Get unique pairs (avoid duplicates since we stored both directions)\n",
+    "    unique_pairs = set()\n",
+    "    for (m1, m2) in avoidance_dict.keys():\n",
+    "        if m1 < m2:  # Only store once per pair (m1 < m2 to avoid duplicates)\n",
+    "            unique_pairs.add((m1, m2))\n",
+    "    \n",
+    "    print(f\"Creating variables for {len(unique_pairs)} unique avoidance pairs...\")\n",
+    "    \n",
+    "    # Create binary variables for each avoidance pair at each location\n",
+    "    for (m1, m2) in unique_pairs:\n",
+    "        penalty = avoidance_dict[(m1, m2)]\n",
+    "        for b in bases:\n",
+    "            for g in periods:\n",
+    "                for s in shifts:\n",
+    "                    var_name = f'y_avoid_m{m1}_m{m2}_b{b}_g{g}_s{s}'\n",
+    "                    avoidance_vars[(m1, m2, b, g, s)] = solver.IntVar(0, 1, var_name)\n",
+    "    \n",
+    "    print(f\"Created {len(avoidance_vars)} avoidance penalty variables\")\n",
+    "    \n",
+    "    # Add constraints to linearize y = x[m1] * x[m2]\n",
+    "    # y <= x[m1]\n",
+    "    # y <= x[m2]\n",
+    "    # y >= x[m1] + x[m2] - 1\n",
+    "    constraint_count = 0\n",
+    "    for (m1, m2) in unique_pairs:\n",
+    "        for b in bases:\n",
+    "            for g in periods:\n",
+    "                for s in shifts:\n",
+    "                    y_var = avoidance_vars[(m1, m2, b, g, s)]\n",
+    "                    \n",
+    "                    # Constraint 1: y <= x[m1]\n",
+    "                    constraint1 = solver.Constraint(-solver.infinity(), 0, \n",
+    "                                                    f'avoid_y_le_x1_m{m1}_m{m2}_b{b}_g{g}_s{s}')\n",
+    "                    constraint1.SetCoefficient(y_var, 1)\n",
+    "                    constraint1.SetCoefficient(x[(m1, b, g, s)], -1)\n",
+    "                    \n",
+    "                    # Constraint 2: y <= x[m2]\n",
+    "                    constraint2 = solver.Constraint(-solver.infinity(), 0,\n",
+    "                                                    f'avoid_y_le_x2_m{m1}_m{m2}_b{b}_g{g}_s{s}')\n",
+    "                    constraint2.SetCoefficient(y_var, 1)\n",
+    "                    constraint2.SetCoefficient(x[(m2, b, g, s)], -1)\n",
+    "                    \n",
+    "                    # Constraint 3: y >= x[m1] + x[m2] - 1\n",
+    "                    constraint3 = solver.Constraint(-1, solver.infinity(),\n",
+    "                                                    f'avoid_y_ge_sum_m{m1}_m{m2}_b{b}_g{g}_s{s}')\n",
+    "                    constraint3.SetCoefficient(y_var, -1)\n",
+    "                    constraint3.SetCoefficient(x[(m1, b, g, s)], 1)\n",
+    "                    constraint3.SetCoefficient(x[(m2, b, g, s)], 1)\n",
+    "                    \n",
+    "                    constraint_count += 3\n",
+    "    \n",
+    "    print(f\"Added {constraint_count} linearization constraints for avoidance penalties\")\n",
+    "    print(f\"Total constraints: {solver.NumConstraints()}\")\n",
+    "    print(f\"Total variables: {solver.NumVariables()}\")\n",
+    "else:\n",
+    "    print(\"No avoidance pairs found. Skipping avoidance penalty variables.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "deedede4",
    "metadata": {},
    "outputs": [
@@ -522,11 +624,13 @@
    "source": [
     "# Objective Function: Minimize total cost of moving mechanics to bases\n",
     "# Minimize: Σ(m∈Mechanics) Σ(b∈Bases) Σ(g∈Groups) Σ(s∈Shifts) cost[m, b] * x[m, b, g, s]\n",
+    "#          + Σ(avoidance pairs) Σ(b,g,s) penalty * y[m1, m2, b, g, s]\n",
     "\n",
     "print(\"Creating objective function...\")\n",
     "\n",
     "objective = solver.Objective()\n",
     "\n",
+    "# Add movement costs\n",
     "for m in mechanics:\n",
     "    for b in bases:\n",
     "        # Get cost for this mechanic-base pair\n",
@@ -535,10 +639,33 @@
     "            for s in shifts:\n",
     "                objective.SetCoefficient(x[(m, b, g, s)], cost)\n",
     "\n",
+    "# Add avoidance penalties\n",
+    "if avoidance_dict and avoidance_vars:\n",
+    "    # Get unique pairs (avoid duplicates)\n",
+    "    unique_pairs = set()\n",
+    "    for (m1, m2) in avoidance_dict.keys():\n",
+    "        if m1 < m2:\n",
+    "            unique_pairs.add((m1, m2))\n",
+    "    \n",
+    "    penalty_count = 0\n",
+    "    for (m1, m2) in unique_pairs:\n",
+    "        penalty = avoidance_dict[(m1, m2)]\n",
+    "        for b in bases:\n",
+    "            for g in periods:\n",
+    "                for s in shifts:\n",
+    "                    if (m1, m2, b, g, s) in avoidance_vars:\n",
+    "                        # Add penalty * y[m1, m2, b, g, s] to objective\n",
+    "                        objective.SetCoefficient(avoidance_vars[(m1, m2, b, g, s)], penalty)\n",
+    "                        penalty_count += 1\n",
+    "    \n",
+    "    print(f\"Added {penalty_count} avoidance penalty terms to objective\")\n",
+    "\n",
     "objective.SetMinimization()\n",
     "\n",
-    "print(\"Objective function created: Minimize total movement cost\")\n",
-    "print(f\"Number of variables in objective: {len(x)}\")\n",
+    "print(\"Objective function created: Minimize total movement cost + avoidance penalties\")\n",
+    "print(f\"Number of assignment variables in objective: {len(x)}\")\n",
+    "if avoidance_dict and avoidance_vars:\n",
+    "    print(f\"Number of avoidance penalty variables in objective: {len(avoidance_vars)}\")\n",
     "print(f\"Model summary:\")\n",
     "print(f\"  Variables: {solver.NumVariables()}\")\n",
     "print(f\"  Constraints: {solver.NumConstraints()}\")"
@@ -546,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "52446a08",
    "metadata": {},
    "outputs": [
@@ -641,7 +768,50 @@
     "    \n",
     "    print(\"-\" * 80)\n",
     "    print(f\"\\nTotal assignments: {len(assignments)}\")\n",
-    "    print(f\"Total cost: {total_cost:.2f}\")\n",
+    "    print(f\"Total movement cost: {total_cost:.2f}\")\n",
+    "    \n",
+    "    # Calculate avoidance penalties\n",
+    "    if avoidance_dict and avoidance_vars:\n",
+    "        total_avoidance_penalty = 0\n",
+    "        avoidance_pairs_found = []\n",
+    "        unique_pairs = set()\n",
+    "        for (m1, m2) in avoidance_dict.keys():\n",
+    "            if m1 < m2:\n",
+    "                unique_pairs.add((m1, m2))\n",
+    "        \n",
+    "        for (m1, m2) in unique_pairs:\n",
+    "            penalty = avoidance_dict[(m1, m2)]\n",
+    "            for b in bases:\n",
+    "                for g in periods:\n",
+    "                    for s in shifts:\n",
+    "                        if (m1, m2, b, g, s) in avoidance_vars:\n",
+    "                            if avoidance_vars[(m1, m2, b, g, s)].solution_value() > 0.5:\n",
+    "                                total_avoidance_penalty += penalty\n",
+    "                                shift_name = \"Day\" if s == 1 else \"Night\"\n",
+    "                                avoidance_pairs_found.append({\n",
+    "                                    'mechanic1': m1,\n",
+    "                                    'mechanic2': m2,\n",
+    "                                    'base': b,\n",
+    "                                    'group': g,\n",
+    "                                    'shift': shift_name,\n",
+    "                                    'penalty': penalty\n",
+    "                                })\n",
+    "        \n",
+    "        print(f\"Total avoidance penalty: {total_avoidance_penalty:.2f}\")\n",
+    "        print(f\"Total objective value (movement + penalties): {objective.Value():.2f}\")\n",
+    "        \n",
+    "        if avoidance_pairs_found:\n",
+    "            print(f\"\\n⚠ Avoidance pairs assigned together ({len(avoidance_pairs_found)} instances):\")\n",
+    "            for pair in avoidance_pairs_found[:10]:  # Show first 10\n",
+    "                print(f\"  Mechanics {pair['mechanic1']} & {pair['mechanic2']} at Base {pair['base']}, \"\n",
+    "                      f\"Group {pair['group']}, {pair['shift']} shift (penalty: {pair['penalty']:.2f})\")\n",
+    "            if len(avoidance_pairs_found) > 10:\n",
+    "                print(f\"  ... and {len(avoidance_pairs_found) - 10} more\")\n",
+    "        else:\n",
+    "            print(\"✓ No avoidance pairs assigned together\")\n",
+    "    else:\n",
+    "        print(f\"Total objective value: {objective.Value():.2f}\")\n",
+    "    \n",
     "    print(f\"\\nUnassigned mechanics: {len(mechanics) - len(assignments)}\")\n",
     "    \n",
     "elif status == pywraplp.Solver.FEASIBLE:\n",
