Created app.py with Streamlit app to provide uploadable files and download rosters.

--- a/notebooks/mechanics_roster_optimization_dist_cost.ipynb
+++ b/notebooks/mechanics_roster_optimization_dist_cost.ipynb
@@ -756,7 +756,7 @@
     "    \n",
     "    # Helper function to determine position\n",
     "    def get_position(mechanic_id, has_inspector_skill_for_shift, mechanic_skills_dict):\n",
-    "        # Check if mechanic has inspector skills for this shift\n",
+    "        # Inspector override: if selected as inspector for this shift, always Inspector\n",
     "        if has_inspector_skill_for_shift:\n",
     "            return 'Inspector'\n",
     "        \n",
@@ -774,14 +774,15 @@
     "                has_avionics = True\n",
     "        \n",
     "        # Position rules:\n",
-    "        # If has Airframe and/or Engine → Mechanic\n",
-    "        # If has Avionics and missing other skills → Avionic\n",
-    "        if has_airframe or has_engine:\n",
-    "            return 'Mechanic'\n",
-    "        elif has_avionics:\n",
+    "        # - If mechanic has avionics skill and any of airframe/engine missing → Avionic\n",
+    "        # - If mechanic has airframe and/or engine and no avionics → Mechanic\n",
+    "        # - If mechanic has all three skills → Mechanic\n",
+    "        if has_avionics and not (has_airframe and has_engine):\n",
     "            return 'Avionic'\n",
-    "        else:\n",
-    "            return 'Mechanic'  # Default\n",
+    "        if has_airframe or has_engine or has_avionics:\n",
+    "            return 'Mechanic'\n",
+    "        # If no skills flagged, default to Mechanic\n",
+    "        return 'Mechanic'\n",
     "    \n",
     "    # Helper function to check if mechanic has skill type across all aircraft\n",
     "    def has_skill_type(mechanic_id, skill_type, mechanic_skills_dict):\n",
